# ibkr-trading-bot-production

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  README.md  README_DEPLOYMENT.md  mypy_errors.txt  pyproject.toml  test_gateway_connection.py
.github/: copilot-instructions.md
config/: live_validation_config.yaml  operator_id.env
data/: daily_gameplan.json  daily_gameplan_20260223.json  daily_gameplan_20260225.json  daily_gameplan_20260226.json  daily_gameplan_20260302.json
deploy/: DEPLOYMENT_STRUCTURE.md  DEPRECATED.md  README.md
docker/: README.md  docker-compose.yml
docs/: CHUNK_6_SNAPSHOT_DATA_HANDOFF.md  CRO_Review_Task_1_1_7_Safety.md  CRUCIBLE_v4.0_DRAFT.md  CRUCIBLE_v4.1_1.md  DEVELOPMENT_SETUP.md  HANDOFF_Task_3_5_Zero_Touch_Startup.md  HANDOFF_Task_3_6_QA_Review.md  OPERATOR_ACTION_PLAN_rt_remediation.md  P3-S10_Task_3_4_Migration_Validation_Handoff.md  Phase_1_Sprint_Plan_2026-02-06.md  Phase_3_Sprint_1_Technical_Decision_Briefing_1.md  QA_REVIEW_SUMMARY_Task_3_6.md  QA_REVIEW_Task_3_1_Response.md  RED_TEAM_REPORT_factory_floor_tooling_2026-02-07.md  RUNTIME_VALIDATION_EXECUTION_IMMEDIATE.md  RUNTIME_VALIDATION_RESULTS.md  RUNTIME_VALIDATION_chunk_5_snapshot_script.md  SKIPPED_TESTS_INVENTORY_Task_3_6.md  TASK-3.4.1_Bot_Gateway_API_Authentication_Fix.md  TASK_2_1_IMPLEMENTATION_SUMMARY.md  Task 0.4 Blueprint.md  Task_3_4_Migration_Final_Report_2026-02-10.md  Task_4_2_Validation_Log.md  VALIDATION_RESULTS_Task_3_3_Health_Monitoring.md  VALIDATION_RESULTS_chunk_5.md  VSC_HANDOFF_Coverage_1_1_5_Risk_Layer_Tests.md  VSC_HANDOFF_TEMPLATE_v2.md  VSC_HANDOFF_Task_1.1.6_Execution_Layer_Tests.md  (+39 more)
(+178 files in other folders)
