[tool.poetry]
name = "ibkr-trading-bot"
version = "0.1.0"
description = "IBKR options trading bot"
authors = ["Charter & Stone Capital"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
ib-insync = "*"
pandas = "*"
numpy = "*"
pydantic = "*"
pydantic-settings = "*"
aiohttp = "*"
python-dotenv = "*"
jsonschema = "^4.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
black = "*"
ruff = "*"
mypy = "*"
pre-commit = "^4.0.1"
types-pyyaml = "^6.0.12.20250915"
types-jsonschema = "^4.26.0.20260202"

[tool.black]
line-length = 100

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
